--- a/csharp_unit_selenium-master/Bdd-TestProject/Bdd-TestProject.csproj
+++ b/csharp_unit_selenium-master/Bdd-TestProject/Bdd-TestProject.csproj
@@ -1,4 +1,4 @@
-<Project Sdk='Microsoft.NET.Sdk'>
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -11,25 +11,33 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include='Aquality.Selenium' Version='4.22.1' />
-		<PackageReference Include='Aquality.Selenium.Core' Version='3.1.3' />
-		<PackageReference Include='coverlet.collector' Version='6.0.2'>
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include='Microsoft.NET.Test.Sdk' Version='17.12.0' />
-		<PackageReference Include='NUnit' Version='4.3.1' />
-		<PackageReference Include='NUnit.Analyzers' Version='4.5.0'>
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include='NUnit3TestAdapter' Version='4.6.0' />
-		<PackageReference Include='SpecFlow' Version='3.9.74' />
-		<PackageReference Include='SpecFlow.NUnit' Version='3.9.74' />
+	  <SpecFlowFeatureFiles Remove="mytask\Features\TryingFeature.feature" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Using Include='NUnit.Framework' />
+	  <Compile Include="mytask\Features\TryingFeature.feature" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Aquality.Selenium" Version="4.22.1" />
+		<PackageReference Include="Aquality.Selenium.Core" Version="3.1.3" />
+		<PackageReference Include="coverlet.collector" Version="6.0.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+		<PackageReference Include="NUnit" Version="4.3.1" />
+		<PackageReference Include="NUnit.Analyzers" Version="4.5.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+		<PackageReference Include="SpecFlow" Version="3.9.74" />
+		<PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Using Include="NUnit.Framework" />
 	</ItemGroup>
 
 </Project>
